--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,13 @@
   </head>
 
   <body>
+    <nav class="topbar">
+      <a href="/" class="avatar-container topbar__part">
+        <img src="img/me/trans-flag.webp" alt="Avatar" class="avatar" />
+        <p class="name">lydia</p>
+      </a>
+    </nav>
+
     <script src="js/app.js"></script>
   </body>
 </html>
