refac: redo profile card links

--- a/src/profile.html
+++ b/src/profile.html
@@ -37,13 +37,13 @@
                 src="https://emojiflags.avris.it/flags/Transgender.png"
                 alt="Transgender flag"
               />
-              she/her
+              she/her • they/them
             </div>
           </div>
         </div>
 
         <div class="profile-card__body">
-          <div class="profile-card__bio profile-card__section">
+          <div class="profile-card__section profile-card__bio">
             <h2 class="profile-card__section-header">about me</h2>
 
             <p>
@@ -57,40 +57,104 @@
           <div class="profile-card__section profile-card__links">
             <h2 class="profile-card__section-header">links</h2>
 
-            <div class="profile-card__links-list">
-              <a
-                href="https://discord.com/users/377491995960016897"
-                title="Discord / @_lydia.s"
-              >
-                <i aria-hidden="true" class="nf nf-md-discord"></i>
-              </a>
+            <ul class="profile-card__links-list">
+              <li>
+                <a
+                  href="https://discord.com/users/377491995960016897"
+                  title="Discord / @_lydia.s"
+                >
+                  <div class="profile-card__links-list-header">
+                    <i class="nf nf-fa-discord"></i>
+                    <p>Discord / @_lydia.s</p>
+                  </div>
 
-              <a href="https://gitlab.com/lydia-st/" title="GitLab / lydia-st">
-                <i aria-hidden="true" class="nf nf-seti-gitlab"></i>
-              </a>
+                  <div class="profile-card__links-list-description">
+                    I'm fairly active on Discord, so feel free to add me!
+                  </div>
+                </a>
+              </li>
 
-              <a href="https://github.com/lydia-st/" title="GitHub / lydia-st">
-                <i aria-hidden="true" class="nf nf-md-github"></i>
-              </a>
+              <li>
+                <a
+                  href="https://gitlab.com/lydia-st/"
+                  title="GitLab / lydia-st"
+                >
+                  <div class="profile-card__links-list-header">
+                    <i class="nf nf-fa-gitlab"></i>
+                    <p>GitLab / lydia-st</p>
+                  </div>
 
-              <a href="https://discuit.net/@lydia" title="Discuit / @lydia">
-                <i aria-hidden="true" class="nf nf-md-cookie"></i>
-              </a>
+                  <div class="profile-card__links-list-description">
+                    GitLab is the primary place I host my projects.
+                  </div>
+                </a>
+              </li>
 
-              <a
-                href="https://twitter.com/_lydia_st"
-                title="Twitter / @_lydia_st"
-              >
-                <i aria-hidden="true" class="nf nf-md-twitter"></i>
-              </a>
+              <li>
+                <a
+                  href="https://github.com/lydia-st/"
+                  title="GitHub / lydia-st"
+                >
+                  <div class="profile-card__links-list-header">
+                    <i class="nf nf-fa-github"></i>
+                    <p>GitHub / lydia-st</p>
+                  </div>
 
-              <a
-                href="mailto:lydia-gh@murena.io"
-                title="Email / lydia-gh@murena.io"
-              >
-                <i aria-hidden="true" class="nf nf-md-email"></i>
-              </a>
-            </div>
+                  <div class="profile-card__links-list-description">
+                    I also have a GitHub account, but I don't use it as much.
+                    Some of my GitLab repositories are mirrored here.
+                  </div>
+                </a>
+              </li>
+
+              <li>
+                <a href="https://discuit.net/@lydia" title="Discuit / @lydia">
+                  <div class="profile-card__links-list-header">
+                    <i class="nf nf-md-discuit"></i>
+                    <p>Discuit / @lydia</p>
+                  </div>
+
+                  <div class="profile-card__links-list-description">
+                    I'm also on Discuit, a discussion platform and a link
+                    aggregator
+                  </div>
+                </a>
+              </li>
+
+              <li>
+                <a
+                  href="https://twitter.com/_lydia_st"
+                  title="Twitter / @_lydia_st"
+                >
+                  <div class="profile-card__links-list-header">
+                    <i class="nf nf-fa-twitter"></i>
+                    <p>Twitter / @_lydia_st</p>
+                  </div>
+
+                  <div class="profile-card__links-list-description">
+                    I primarily use Twitter for the funnies, I'm not one to post
+                    much myself.
+                  </div>
+                </a>
+              </li>
+
+              <li>
+                <a
+                  href="mailto:lydia-gh@murena.io"
+                  title="Email / lydia-gh@murena.io"
+                >
+                  <div class="profile-card__links-list-header">
+                    <i class="nf nf-fa-envelope"></i>
+                    <p>Email / lydia-gh@murena.io</p>
+                  </div>
+
+                  <div class="profile-card__links-list-description">
+                    Email is a super modern way to contact me, and i actually
+                    check it fairly regularly.
+                  </div>
+                </a>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
