feat: add skills, system info

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/main.css" />
     <meta name="description" content="" />
 
+    <meta http-equiv="refresh" content="0;url=profile.html" />
+
     <meta property="og:title" content="" />
     <meta property="og:type" content="" />
     <meta property="og:url" content="" />
