--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
     <nav class="topbar">
       <a href="/" class="avatar-container topbar__part">
         <img src="img/me/trans-flag.webp" alt="Avatar" class="avatar" />
-        <p class="name">lydia</p>
+        <p class="name">taylor</p>
       </a>
     </nav>
 
