--- a/src/profile.html
+++ b/src/profile.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Lydia • About Me</title>
+    <title>Taylor • About Me</title>
     <link rel="stylesheet" href="css/boilerplate.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/profile-card.css" />
@@ -30,7 +30,7 @@
             <img src="img/me/trans-flag.webp" alt="avatar" />
           </div>
           <div class="profile-card__header-text">
-            <div class="profile-card__name">lydia</div>
+            <div class="profile-card__name">taylor</div>
             <div class="profile-card__pronouns">
               <img
                 class="profile-card__pronouns-flag"
@@ -47,7 +47,7 @@
             <h2 class="profile-card__section-header">about me</h2>
 
             <p>
-              Hiii! I'm Lydia, a <span id="age">16</span>-year-old developer
+              Hiii! I'm Taylor, a <span id="age">16</span>-year-old developer
               from the UK. Currently, I'm learning my way around
               <a href="https://www.rust-lang.org/">Rust</a> and
               <a href="https://www.rust-lang.org/">Sycamore</a>, so I can make
@@ -126,11 +126,11 @@
               <li>
                 <a
                   href="https://discord.com/users/377491995960016897"
-                  title="Discord / @_lydia.s"
+                  title="Discord / @_taylor.s"
                 >
                   <div class="profile-card__links-list-header">
                     <i class="nf nf-fa-discord"></i>
-                    <p>Discord / @_lydia.s</p>
+                    <p>Discord / @_taylor.s</p>
                   </div>
 
                   <div class="profile-card__links-list-description">
@@ -141,12 +141,12 @@
 
               <li>
                 <a
-                  href="https://gitlab.com/lydia-st/"
-                  title="GitLab / lydia-st"
+                  href="https://gitlab.com/taylor-st/"
+                  title="GitLab / taylor-st"
                 >
                   <div class="profile-card__links-list-header">
                     <i class="nf nf-fa-gitlab"></i>
-                    <p>GitLab / lydia-st</p>
+                    <p>GitLab / taylor-st</p>
                   </div>
 
                   <div class="profile-card__links-list-description">
@@ -157,12 +157,12 @@
 
               <li>
                 <a
-                  href="https://github.com/lydia-st/"
-                  title="GitHub / lydia-st"
+                  href="https://github.com/taylor-st/"
+                  title="GitHub / taylor-st"
                 >
                   <div class="profile-card__links-list-header">
                     <i class="nf nf-fa-github"></i>
-                    <p>GitHub / lydia-st</p>
+                    <p>GitHub / taylor-st</p>
                   </div>
 
                   <div class="profile-card__links-list-description">
@@ -173,10 +173,10 @@
               </li>
 
               <li>
-                <a href="https://discuit.net/@lydia" title="Discuit / @lydia">
+                <a href="https://discuit.net/@taylor" title="Discuit / @taylor">
                   <div class="profile-card__links-list-header">
                     <i class="nf nf-md-discuit"></i>
-                    <p>Discuit / @lydia</p>
+                    <p>Discuit / @taylor</p>
                   </div>
 
                   <div class="profile-card__links-list-description">
@@ -188,12 +188,12 @@
 
               <li>
                 <a
-                  href="https://twitter.com/_lydia_st"
-                  title="Twitter / @_lydia_st"
+                  href="https://twitter.com/_taylor_st"
+                  title="Twitter / @_taylor_st"
                 >
                   <div class="profile-card__links-list-header">
                     <i class="nf nf-fa-twitter"></i>
-                    <p>Twitter / @_lydia_st</p>
+                    <p>Twitter / @_taylor_st</p>
                   </div>
 
                   <div class="profile-card__links-list-description">
@@ -205,12 +205,12 @@
 
               <li>
                 <a
-                  href="mailto:lydia-gh@murena.io"
-                  title="Email / lydia-gh@murena.io"
+                  href="mailto:taylor-gh@murena.io"
+                  title="Email / taylor-gh@murena.io"
                 >
                   <div class="profile-card__links-list-header">
                     <i class="nf nf-fa-envelope"></i>
-                    <p>Email / lydia-gh@murena.io</p>
+                    <p>Email / taylor-gh@murena.io</p>
                   </div>
 
                   <div class="profile-card__links-list-description">
